[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codechu-meter"
version = "0.3.0"
description = "Stdlib-only measurement primitives — stopwatch, rate estimation, ETA prediction."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
authors = [{ name = "Codechu" }]
keywords = ["stopwatch", "rate", "eta", "progress", "measurement", "stdlib"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/codechu/meter-py"
Source = "https://github.com/codechu/meter-py"
Issues = "https://github.com/codechu/meter-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
